---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: function_with_params.cm
============================================================
Source code:
func add(a: felt, b: felt) -> felt {
    return a + b;
}
============================================================
Generated CASM:
add:
   0: 0 -5 -4 -3           // [fp + -3] = [fp + -5] op [fp + -4]
   1: 15 _ _ _             // return
